--- a/src/demo/demo-components/DemoSavedWordsList/DemoSavedWordsList.css
+++ b/src/demo/demo-components/DemoSavedWordsList/DemoSavedWordsList.css
@@ -24,6 +24,11 @@
     font-size: 1.75rem;
 }
 
+.saved-word-list-subtext {
+    text-align: left;
+    margin-top: 2vmin;
+}
+
 .saved-words-list-container {
     margin-top: 2vmin;
     padding-right: 12px;
